test/MC/SVE/regression-tests/negative_tests/sve-ld3b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E3Load1LSSZ
// Offset register Rm cannot be xzr
ld3b {z0.b, z1.b, z2.b}, p0/z, [x19, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
